--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* General styles for both pages */
+/* General styles for both pagess */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Roboto:wght@300;400;700&display=fallback');
 
 body {
